@@ -1,3 +1,7 @@
+TheMightyDude (26 Apr 2008)
+--------------------------------------
+Fixed an exploit in news.php where anyone can inject SQL into startdate to display all players passwords etc.
+
 TheMightyDude (24 Apr 2008)
 --------------------------------------
 Fixed the players log when displaying Apocalypse [SPACE_PLAGUE] so it now displays the percentage.
